--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>
-  {{title}}
-  <tf-searcher></tf-searcher>
-</h1>
+<tf-toolbar></tf-toolbar>
+
+<tf-main-title></tf-main-title>
+
+<tf-searcher></tf-searcher>
