--- a/src/app/searcher/searcher.component.css
+++ b/src/app/searcher/searcher.component.css
@@ -1,3 +1,11 @@
 md-input-container{
     font-size: 1.5rem;
 }
+
+.md-input-underline .md-input-ripple {
+  border-color: $blue-color;
+}
+
+md-spinner{
+    margin: 0 auto;
+}
