--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<tf-toolbar></tf-toolbar>
+<div class="mat-app-background">
 
-<tf-main-title></tf-main-title>
+    <tf-toolbar></tf-toolbar>
 
-<tf-searcher></tf-searcher>
-
-<tf-result></tf-result>
+    <router-outlet></router-outlet>
+</div>
