--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$tf-app-primary: md-palette($md-teal);
-$tf-app-accent:  md-palette($md-deep-orange, A200, A100, A400);
+$tf-app-primary: md-palette($md-deep-orange);
+$tf-app-accent:  md-palette($md-indigo, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $tf-app-warn:    md-palette($md-red);
