--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,3 @@
 <md-toolbar color="primary">
-  <a href="/" md-button><md-icon>picture_in_picture_alt</md-icon> <span>TUFILMOTK</span></a>
+  <a href="/" md-button><md-icon>remove_from_queue</md-icon> <span>TUFILMOTK</span></a>
 </md-toolbar>
