--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
+<tf-toolbar>
 
+</tf-toolbar>
 
-    <tf-toolbar></tf-toolbar>
-
-    <router-outlet></router-outlet>
+<router-outlet></router-outlet>
