cambio de theme e icono de github

--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -57,7 +57,7 @@
             </p>
         </md-card-content>
         <md-card-actions class="inicio">
-            <a href="/" md-button>VOLVER AL INICIO</a>
+            <a [routerLink]="['/']" md-button>VOLVER AL INICIO</a>
         </md-card-actions>
     </md-card>
 </section>
