--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
 <md-toolbar color="primary">
-  <a href="/" md-button><md-icon>remove_from_queue</md-icon> <span>TUFILMOTK</span></a>
+  <a [routerLink]="['/']" md-button><md-icon>remove_from_queue</md-icon> <span>TUFILMOTK</span></a>
   <span class="spacer"></span>
-  <a md-button href="https://www.facebook.com/tufilmoteca/"><md-icon>share</md-icon></a>
+  <a md-button class="iconbtn" mdTooltip="Facebook" href="https://www.facebook.com/tufilmoteca/"><md-icon>share</md-icon></a>
+  <a md-button class="iconbtn" mdTooltip="Github" href="https://github.com/dannielarriola/tufilmotk"><md-icon>code</md-icon></a>
 </md-toolbar>
