--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$tf-app-primary: mat-palette($mat-deep-orange);
+$tf-app-primary: mat-palette($mat-blue-grey);
 $tf-app-accent:  mat-palette($mat-indigo, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
